--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,4 +2,10 @@
 
 
 @import "compass/reset";
-@import "bootstrap";
+@import "watchsteez-bootstrap";
+@import "override";	
+
+
+@import "watchsteez-variables";
+@import "home.scss";
+@import "footer.scss";
