--- a/app/css/modules/footer.css
+++ b/app/css/modules/footer.css
@@ -1,8 +1,8 @@
-/* line 2, ../scss/footer.scss */
+/* line 2, ../../scss/modules/footer.scss */
 .footer .container {
   margin-top: 15.5px;
 }
-/* line 5, ../scss/footer.scss */
+/* line 5, ../../scss/modules/footer.scss */
 .footer .sales-link {
   text-align: right;
 }
