--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8237,11 +8237,11 @@ button.close {
   color: #FF9403;
 }
 
-/* line 2, ../scss/modules/footer.scss */
+/* line 2, ../scss/footer.scss */
 .footer .container {
   margin-top: 15.5px;
 }
-/* line 5, ../scss/modules/footer.scss */
+/* line 5, ../scss/footer.scss */
 .footer .sales-link {
   text-align: right;
 }
