implemented about page with instagram feed.

--- a/app/templates/layouts/master-template.html
+++ b/app/templates/layouts/master-template.html
@@ -12,6 +12,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
     <script src="/js/jquery.cover.js"></script>
+    <script src="/js/instafeed.js"></script>
+    <script src="/js/jquery.simplyscroll.js"></script>
     <script src="/js/main.js"></script>
 
     <!-- bower:js -->
