--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8245,3 +8245,73 @@ button.close {
 .footer .sales-link {
   text-align: right;
 }
+
+/* Container DIV - automatically generated */
+/* line 2, ../scss/scroller.scss */
+.simply-scroll-container {
+  position: relative;
+  top: 50px;
+}
+
+/* Clip DIV - automatically generated */
+/* line 8, ../scss/scroller.scss */
+.simply-scroll-clip {
+  position: relative;
+  overflow: hidden;
+}
+
+/* UL/OL/DIV - the element that simplyScroll is inited on
+Class name automatically added to element */
+/* line 15, ../scss/scroller.scss */
+.simply-scroll-list {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+/* line 22, ../scss/scroller.scss */
+.simply-scroll-list li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+/* line 28, ../scss/scroller.scss */
+.simply-scroll-list li img {
+  border: none;
+  display: block;
+}
+
+/* Custom class modifications - adds to / overrides above
+
+.simply-scroll is default base class */
+/* Container DIV */
+/* line 38, ../scss/scroller.scss */
+.simply-scroll {
+  width: 100%;
+  height: 306px;
+  margin-bottom: 1em;
+}
+
+/* Clip DIV */
+/* line 45, ../scss/scroller.scss */
+.simply-scroll .simply-scroll-clip {
+  width: 100%;
+  height: 306px;
+}
+
+/* Explicitly set height/width of each list item */
+/* line 51, ../scss/scroller.scss */
+.simply-scroll .simply-scroll-list li {
+  float: left;
+  /* Horizontal scroll only */
+  width: 306px;
+  height: 306px;
+}
+
+/* line 1, ../scss/about.scss */
+.about-content {
+  position: relative;
+  top: 70px;
+}
