--- a/app/templates/partials/_navbar.html
+++ b/app/templates/partials/_navbar.html
@@ -8,14 +8,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">WatchSteez</a>
+      <a class="navbar-brand" href="/">WatchSteez</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#">Inventory</a></li>
-        <li><a href="#">About</a></li> 
+        <li><a href="/about.html">About</a></li> 
         <li><a href="#">Resources</a></li> 
         <li><a href="#">Services</a></li> 
         <li><a href="#">FAQ</a></li>        
